--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <h1>FLEXBOX</h1>
     <div class="container">
-      <div class="box box-1">CAJA 1</div>
-      <div class="box box-2">CAJA 2</div>
-      <div class="box box-3">CAJA 3</div>
-      <!-- <div class="box box-4">CAJA 4</div>
-      <div class="box box-5">CAJA 5</div>
-      <div class="box box-6">CAJA 6</div> -->
+      <div class="box box-1">1</div>
+      <div class="box box-2">2</div>
+      <div class="box box-3">3</div>
+      <!-- <div class="box box-4">4</div>
+      <div class="box box-5">5</div>
+      <div class="box box-6">6</div> -->
       <!-- <img src="/gato.jpeg" alt="Cat Image"> -->
     </div>
   </body>
